minor style changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
   The console (also called <em>command line, command prompt or
   terminal</em>) is just another way of interacting with your computer.
   So you can basically do anything with it that you could also do with
-  your graphical desktop user interface. This sections contains a couple
+  your graphical desktop user interface. This section contains a couple
   of examples.
 </p>
 
@@ -1149,7 +1149,7 @@ the purpose of each folder, and describing the most important files.
     <td><code><strong>bundle check</strong></code></td>
     <td>Checks if the dependencies listed in Gemfile are satisfied by currently installed gems
     </td>
-  </tr> 
+  </tr>
   <tr>
     <td>Show existing routes</td>
     <td><code><strong>rake routes</strong></code></td>
